<resources>
    <string name="app_name">TallerListView</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="vlado">Valor del lado</string>
    <string name="resultado">Resultado</string>
    <string name="area">Area:</string>
    <string name="ok">ok</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="base">Base</string>
    <string name="altura">Altura</string>
    <string name="esfera">Esfera</string>
    <string name="radio">Radio</string>
    <string name="volumen">Volumen</string>
    <string name="cilindro">Cilindro</string>
    <string name="opciones">Opciones</string>
    <string name="areas">Areas</string>
    <string name="area_cuadrado">Area de Cuadrado</string>
    <string name="area_rectangulo">Area de Rectangulo</string>
    <string name="volumen_esfera">Volumen de la esfera</string>
    <string name="volumen_cilindro">Volumen de Cilindro</string>
    <string name="lado">Lado</string>
    <string name="guardado">Informacion Guardada exitosamente</string>
    <string name="operacion">Operacion</string>
    <string name="datos">Datos</string>
    <string name="oprealizadas">operaciones realizadas</string>
    <string-array name="opciones">
        <item>@string/areas</item>
        <item>@string/volumen</item>
        <item>@string/oprealizadas</item>
    </string-array>

    <string-array name="opcionesAreas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
    </string-array>

    <string-array name="opcionesVolumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
    </string-array>
    <string name="error1">Por Favor debe Ingresar el radio</string>
    <string name="error2">Por Favor debe Ingresar la altura</string>
    <string name="error3">Por Favor debe Ingresar el lado</string>
    <string name="error4">Por favor debe ingresar la base</string>
    <string name="error5">Por favor debe ingresar la altura</string>
</resources>
